# mdview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/viewer-shell/: README.md
apps/viewer-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/viewer-shell/src-tauri/capabilities/: default.json
apps/viewer-shell/src-tauri/src/: file_open.rs  file_watch.rs  line_map_bridge.rs  main.rs  theme_bridge.rs  window_boot.rs
apps/viewer-shell/web/: index.html
apps/viewer-shell/web/src/: main.ts
apps/viewer-shell/web/src/app/: README.md
apps/viewer-shell/web/src/editor/: README.md
apps/viewer-shell/web/src/features/export/: README.md
apps/viewer-shell/web/src/features/search/: README.md
apps/viewer-shell/web/src/features/toc/: README.md
apps/viewer-shell/web/src/state/: README.md
apps/viewer-shell/web/src/styles/: README.md
apps/viewer-shell/web/src/viewer/: README.md  Viewer.ts
crates/base-styles/: Cargo.toml
crates/base-styles/src/: lib.rs
crates/line-index/: Cargo.toml
crates/line-index/src/: lib.rs
crates/md-engine/: Cargo.toml
crates/md-engine/src/: lib.rs
crates/settings-store/: Cargo.toml
crates/settings-store/src/: lib.rs
crates/win-file-assoc/: Cargo.toml
crates/win-file-assoc/src/: lib.rs
crates/win-installer/: Cargo.toml
crates/win-installer/src/: lib.rs
crates/win-preview-handler/: Cargo.toml
crates/win-preview-handler/src/: lib.rs
crates/win-theme-watcher/: Cargo.toml
crates/win-theme-watcher/src/: lib.rs
docs/: BETA_TEST_CHECKLIST.md  INSTALLER_RUNTIME_RUNBOOK.md  POLISH_FINISH_ROADMAP_2026-03-15.md  POST_WEBVIEW2_VALIDATION.md  PREVIEW_REGRESSION_CHECKLIST.md  RELEASE_NOTES_v0.1.0-beta.1.md  RELEASE_NOTES_v0.1.0-beta.2.md  SESSION_HANDOFF_2026-03-06.md  SESSION_HANDOFF_2026-03-14.md  SESSION_HANDOFF_2026-03-14_preview-pane-3.md  architecture.md  backlog.md  editor-scope.md  rendering-pipeline.md  windows-integration.md
docs/decisions/: 0001-tauri-shell.md  0002-preview-handler-com.md
scripts/: build-web.mjs  package-msix.ps1  package-nsis.ps1  register-dev-shell.ps1  register-dev.ps1
scripts/nsis/: mdview-installer.nsi
tests/e2e/: file-association.spec.ts  jump-to-line.spec.ts  links.spec.ts  preview-handler.spec.ps1  quick-edit.spec.ts  startup.spec.ts  static-server.mjs  theme-sync.spec.ts
tests/e2e/support/: tauri-mock.ts
tests/fixtures/markdown/: sample.md
