[package]
name = "win-preview-handler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
base-styles = { path = "../base-styles" }
md-engine = { path = "../md-engine" }
settings-store = { path = "../settings-store" }
webview2-com = "0.38.2"
win-theme-watcher = { path = "../win-theme-watcher" }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"
