[package]
name = "win-preview-handler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"

# WebView2 COM bindings — 0.38.x requires windows ^0.61
webview2-com = "0.38"

# Shared workspace crates
md-engine       = { path = "../../crates/md-engine" }
base-styles     = { path = "../../crates/base-styles" }
win-theme-watcher = { path = "../../crates/win-theme-watcher" }
