[package]
name = "viewer-shell"
version = "0.1.0-beta.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
notify = "6"
md-engine = { path = "../../../crates/md-engine" }
line-index = { path = "../../../crates/line-index" }
settings-store = { path = "../../../crates/settings-store" }
base-styles = { path = "../../../crates/base-styles" }
win-theme-watcher = { path = "../../../crates/win-theme-watcher" }
win-file-assoc = { path = "../../../crates/win-file-assoc" }
win-installer = { path = "../../../crates/win-installer" }
